test: creating test for WeiEtAl2014FactoryExecutor